# autoflow-backend

./: .env.example  .gitignore  README.md  alembic.ini  backend_context.md  collect.sh  main.py  project_context.txt  project_files_back.txt  project_tests.txt  pyproject.toml  requirements.txt  test_db_connect.py
alembic/: env.py
app/: config.py  main.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0618756b1ff51bca___init___py.html  z_0618756b1ff51bca_cache_py.html  z_0618756b1ff51bca_database_py.html  z_0618756b1ff51bca_exceptions_py.html  z_0618756b1ff51bca_logging_py.html  z_0618756b1ff51bca_security_py.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_app_py.html  z_145eef247bfb46b6_config_py.html  z_67f6f9a13eff1831___init___py.html  z_67f6f9a13eff1831_account_service_py.html  z_67f6f9a13eff1831_auth_service_py.html  z_67f6f9a13eff1831_category_service_py.html  z_67f6f9a13eff1831_dashboard_service_py.html  z_67f6f9a13eff1831_transaction_service_py.html  z_6f7c8c89bef6ae60___init___py.html  z_6f7c8c89bef6ae60_account_repo_py.html  z_6f7c8c89bef6ae60_base_py.html  z_6f7c8c89bef6ae60_budget_repo_py.html  z_6f7c8c89bef6ae60_category_repo_py.html  z_6f7c8c89bef6ae60_transaction_repo_py.html  z_6f7c8c89bef6ae60_user_repo_py.html  z_a3eecf107d40a09d___init___py.html  z_a3eecf107d40a09d_accounts_py.html  z_a3eecf107d40a09d_auth_py.html  z_a3eecf107d40a09d_categories_py.html  z_a3eecf107d40a09d_dashboard_py.html  z_a3eecf107d40a09d_router_py.html  z_a3eecf107d40a09d_transactions_py.html  z_dd4b322c5e9a5c17___init___py.html  (+18 more)
(+104 files in other folders)
